fix: server application.properties fix